[Bug #20680] `ensure` block is always void context